# TOPOS-Xi

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  RESUME_CONTEXT.md  ROADMAP.md  billiards_simulation.xi  billiards_topology.xi  codecov.yml  language-configuration.json  order.htf  package.json  pendulum_simulation.py  pendulum_topology.xi  topos.py  type_system_core.mm  入力した情報.txt
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
backup/: windsurfとぽしょうファーストプロンプト.txt
docs/: README.md  desktop.ini  dev_log.md  implementation_report.md  quantum_system.md  topos-xi-cross-reference.md  topos-xi-standard-path-specification.md  type_system.md
docs/api/: README.md
docs/core/: core-spec.md
docs/docs/core/: topos-xi-complete-reference.md  topos-xi-core-ext.md  topos-xi-invariant-patterns.md  topos-xi-stdlib-spec.md  topos-xi-structural-patterns.md  topos-xi-transformation-patterns.md
docs/guidelines/: README.md  feature_importance_criteria.md
docs/implementation/: topos-xi-implementation-feasibility.md  topos-xi-implementation-guide.md
docs/meta/: word-choice.md
docs/patterns/: information_horizon.md  invariant-patterns.md  structural-patterns.md  transform-patterns.md  transformation-patterns.md
docs/planning/: project_development_checklist.md  quantum_compiler_development_plan.md
docs/progress/: implementation_progress.md
docs/project/: topos-xi-project-structure.md  topos-xi-review-guidelines.md  topos-xi-roadmap.md
docs/spec/: language_core.md
docs/spec/core/: topos-xi-execution-model.md
docs/specs/: core-spec.md  language-architecture.md  observable-spec.md  quantum-spec.md
docs/specs/core/: error-handling-spec.md  execution-model-spec.md
docs/specs/implementation/: README.md  requirements-spec.md
docs/specs/language/: README.md  core-language-spec.md  grammar-spec.md  memory-model-spec.md  namespace-spec.md  operator-spec.md  type-system-spec.md
docs/specs/project/: README.md  repository-structure.md
docs/specs/quality/: README.md
docs/specs/stdlib/: collections-spec.md  concurrency-spec.md  database-spec.md  event-system-spec.md  io-system-spec.md  math-functions-spec.md  network-spec.md  security-spec.md  string-processing-spec.md
docs/stdlib/: standard_library.md
docs/tutorials/: README.md  horizon_filesystem_guide.md
examples/: 01_quantum_basic.topology  02_euler_check.topology  03_recursion.topology  04_scoping.topology  05_lambda.topology  06_match.topology  07_category_composition.topology  08_categorical_errors.topology  09_manifold_orientation.topology  10_product_spaces.topology  11_projections.topology  12_product_properties.topology  13_lexer_model.topology  14_real_lexer.topology  15_lexer_position.topology  16_bootstrap_lexer.topology  17_vocabulary_lexer.topology  advanced_quantum_topology.xi  hello_world.toxi  hello_world_detailed.toxi  input_sample_2026.txt  sample_structure.xi
examples/wizardry_crpg/: README.md
examples/wizardry_crpg/docs/: design_philosophy.md
scripts/: run_tests.ps1  run_tests.sh
src/: compiler.py  extension.ts  interp_clean.py  interp_final.py  interp_full.py  order.htf  sem_anal_clean.py  sem_anal_clean_v2.py  sem_anal_clean_v3.py
src/compiler/: ast_types.hpp  frontend.cpp
src/compiler/ast/: ast.cpp  ast.hpp  ast_visitor.cpp  ast_visitor.hpp
src/compiler/codegen/: quantum_algorithm_optimizer.hpp  quantum_algorithm_utils.hpp  quantum_backend.hpp  quantum_codegen.hpp  quantum_ir.hpp  quantum_optimizer.hpp
src/compiler/error/: error.hpp
src/compiler/lexer/: lexer.hpp
src/compiler/math/: math_topology_verifier.hpp  quantum_verifier.hpp  topology_verifier.hpp
src/compiler/parser/: parser.cpp  parser.hpp  quantum_parser.hpp  quantum_parser_impl.hpp
src/compiler/quantum/: gates.hpp  state_manager.hpp  state_verifier.hpp  syntax.hpp  type_system.hpp
src/compiler/topology/: property_verifier.hpp  topology_verifier.cpp  type_topology_verifier.cpp  type_topology_verifier.hpp  verifier.hpp
src/compiler/types/: basic_type.hpp  dependent_type.hpp  inference.hpp  inference_engine.hpp  inference_system.hpp  optimized_checker.hpp  quantum_traits.hpp  refined_constraints.hpp  topology_traits.hpp  type_checker.hpp  type_system.cpp  type_system.hpp
src/compiler/verification/: basic_verifier.hpp
src/lib/: horizon_filesystem.toxi  information_horizon.toxi
src/quantum/: circuit.hpp  operators.hpp  topology.hpp  type_integration.hpp
src/runtime/: runtime.hpp
src/stdlib/: category.htf  compiler.htf  geometry.htf  manifolds.htf  product.htf  quantum.htf  topology.htf
src/topology/space/: topological_space.hpp  topology_axioms.hpp
syntaxes/: topos-xi.tmLanguage.json
tests/: CMakeLists.txt  TEST_CHECKLIST.md  lexer_test.cpp  parser_test.cpp  type_system_test.cpp
tests/compiler/codegen/: quantum_algorithm_optimizer_test.hpp  quantum_algorithm_optimizer_test_main.cpp
tests/compiler/math/: verifier_test.cpp
tests/compiler/types/: refined_constraints_test.cpp  type_system_test.cpp
tests/topology/space/: topology_axioms_test.cpp
tests/topology/transform/: continuous_transform_test.cpp
tools/: init-repository.ps1  init-repository.sh  update-repository.ps1
(+13 files in other folders)
